--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<link rel="shortcut icon" href="/img/favicon.jpg">
+	<link rel="shortcut icon" href="img/favicon.jpg">
 	<title>Love昕怡</title>
 	<style type="text/css">
 		@font-face {
